--- a/buso.css
+++ b/buso.css
@@ -71,6 +71,7 @@ footer{
 	float: none;
     display: block;
     margin-left: auto;
-    margin-right: auto;
+	margin-right: auto;
+	min-width: 300px;
   }
 }
